render method is emerging

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="splitscreen">
       <div class="playerCard playerCard-one">
         <div id="playerOneStats"></div>
-        <button onclick="players.playerOne.takeDamage(1)">ATTACK</button>
+        <button onclick="players.playerOne.takeDamage(1)">TAKE DAMAGE</button>
       </div>
       <div class="playerCard playerCard-two"></div>
     </div>
