moved render function into object

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
   <body>
 
     <div class="splitscreen">
+
       <div class="playerCard playerCard-one">
-        <div id="playerOneStats"></div>
+        <div id="Mark"></div>
         <button onclick="players.playerOne.takeDamage(1)">TAKE DAMAGE</button>
       </div>
-      <div class="playerCard playerCard-two"></div>
+
+      <div class="playerCard playerCard-two">
+        <div id="Lewis"></div>
+        <button onclick="players.playerTwo.takeDamage(1)">TAKE DAMAGE</button>
+      </div>
     </div>
 
   </body>
