removed hardcoded IDs and made DOM generation dynamic

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
     <div class="splitscreen">
 
-      <div class="playerCard playerCard-one">
+      <!-- <div class="playerCard playerOne">
         <div id="Mark"></div>
         <button onclick="players.playerOne.takeDamage(1)">TAKE DAMAGE</button>
       </div>
 
-      <div class="playerCard playerCard-two">
+      <div class="playerCard playerT">
         <div id="Lewis"></div>
         <button onclick="players.playerTwo.takeDamage(1)">TAKE DAMAGE</button>
       </div>
-    </div>
+    </div> -->
 
   </body>
   <script type="text/javascript" src="script.js">
