added attributes and another player

--- a/index.html
+++ b/index.html
@@ -6,20 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-
-    <div class="splitscreen">
-
-      <!-- <div class="playerCard playerOne">
-        <div id="Mark"></div>
-        <button onclick="players.playerOne.takeDamage(1)">TAKE DAMAGE</button>
-      </div>
-
-      <div class="playerCard playerT">
-        <div id="Lewis"></div>
-        <button onclick="players.playerTwo.takeDamage(1)">TAKE DAMAGE</button>
-      </div>
-    </div> -->
-
+    <div class="splitscreen"></div>
   </body>
   <script type="text/javascript" src="script.js">
   </script>
