--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div class="container">
+      <div class="player1"></div>
+      <div class="player2"></div>
       <button onclick="battle.commence()">battle</button>
     </div>
     <script type="module" src="script.js">
