specific classnames added

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="player1"></div>
-      <div class="player2"></div>
+      <div class="display"></div>
       <button onclick="battle.commence()">battle</button>
     </div>
     <script type="module" src="script.js">
