--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="display"></div>
+      <div class="display">
+      </div>
       <button onclick="battle.commence()">battle</button>
     </div>
     <script type="module" src="script.js">
