add buttons for other actions than commence

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <div class="display">
       </div>
       <button onclick="battle.commence()">battle</button>
+      <button onclick="battle.nextTurn()">next turn</button>
+      <button onclick="battle.commence()">battle</button>
+      <button onclick="battle.commence()">battle</button>
     </div>
     <script type="module" src="script.js">
   </script>
