boradcast arbitrary messages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="container">
+      <div class="messageBoard"></div>
       <div class="display">
       </div>
       <button onclick="battle.commence()">battle</button>
